crates/trawl-dashboard/src/snapshots/trawl_dashboard__tests__render_dashboard_empty.snap
---
source: crates/trawl-dashboard/src/lib.rs
expression: terminal.backend().to_string()
---
" trawld v0.1.0                                                                  "
" host: test-host  addr: 127.0.0.1:5514  uptime: 2h 34m  health: OK              "
"┌ EXECUTOR POOL ───────────────┐┌ HOT BUFFER ──────────────────────────────────┐"
"│ active: 1/4                  ││ events: 0 / 100,000 (0.0%)                   │"
"│████████     25%              ││ bytes:  0 B / 100.0 MB (0.0%)                │"
"│                              ││ batches: 0                                   │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ HTTP INGEST ─────────────────┐┌ SYSLOG INGEST ───────────────────────────────┐"
"│ events: 0  ~0 ev/s           ││ events: 1,337,170  ~530 ev/s                 │"
"│ rejected: 0                  ││ udp: 1,247,829  tcp: 89,341                  │"
"│                              ││ errors: 12  dropped: 3  tcp conns: 2         │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ QUERY THROUGHPUT ────────────┐┌ DATA PIPELINE ───────────────────────────────┐"
"│ total: 0  0.0 q/s            ││ wal: age 2s 12f/4.2 MB  compacted: 3s ago    │"
"│ errors: 0  timeouts: 0       ││ parquet: age 2s 847f/12.4 GB  runs: 1,247    │"
"│                              ││ free: age 2s 120.0 GB/500.0 GB  floor 1.0 GB │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ SSE STREAMS ─────────────────┐┌ SCHEDULER ───────────────────────────────────┐"
"│ active: 2/32                 ││ enabled: 3 schedules                         │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ RECENT QUERIES ──────────────────────────────────────────────────────────────┐"
"│ no queries yet                                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" q or ctrl-c to quit                                                            "
