crates/trawl-dashboard/src/snapshots/trawl_dashboard__tests__render_dashboard_no_footer.snap
---
source: crates/trawl-dashboard/src/lib.rs
expression: terminal.backend().to_string()
---
" trawld v0.1.0                                                                  "
" host: test-host  addr: 127.0.0.1:5514  uptime: 2h 34m  health: OK              "
"┌ EXECUTOR POOL ───────────────┐┌ HOT BUFFER ──────────────────────────────────┐"
"│ active: 1/4                  ││ events: 12,847 / 100,000 (12.8%)             │"
"│████████     25%              ││ bytes:  4.2 MB / 100.0 MB (4.2%)             │"
"│                              ││ batches: 23                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ HTTP INGEST ─────────────────┐┌ SYSLOG INGEST ───────────────────────────────┐"
"│ events: 847,293  ~340 ev/s   ││ events: 1,337,170  ~530 ev/s                 │"
"│ rejected: 47                 ││ udp: 1,247,829  tcp: 89,341                  │"
"│                              ││ errors: 12  dropped: 3  tcp conns: 2         │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ QUERY THROUGHPUT ────────────┐┌ DATA PIPELINE ───────────────────────────────┐"
"│ total: 1,247  2.1 q/s        ││ wal: age 2s 12f/4.2 MB  compacted: 3s ago    │"
"│ errors: 12  timeouts: 3      ││ parquet: age 2s 847f/12.4 GB  runs: 1,247    │"
"│                              ││ free: age 2s 120.0 GB/500.0 GB  floor 1.0 GB │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ SSE STREAMS ─────────────────┐┌ SCHEDULER ───────────────────────────────────┐"
"│ active: 2/32                 ││ enabled: 3 schedules                         │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ RECENT QUERIES ──────────────────────────────────────────────────────────────┐"
"│#1247   23ms     142 rows   OK   _severity=error last=1h | stats count() by se│"
"│#1246   87ms     1 rows     OK   * | stats count()                            │"
"│#1245   12ms     - rows     ERR  invalid query syntax                         │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ ACTIVE QUERIES ──────────────────────────────────────────────────────────────┐"
"│#1248   admin      running 1.2s   service=nginx | timechart span=5m count()   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
